cabal-version:      2.4
name:               aoc
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             mknaw
maintainer:         mknawara@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common common-options
    default-language:    Haskell2010
    ghc-options:         -Wall
                         -Wcompat
                         -Widentities
                         -Wincomplete-uni-patterns
                         -Wincomplete-record-updates
                         -Wno-unused-do-bind


    build-depends:
        base ^>=4.14.3.0
        , ansi-terminal ==0.11.*
        , Cabal ==3.8.*
        , containers ==0.6.*
        , criterion ==1.6.*
        , criterion-measurement ==0.2.*
        , directory ==1.3.*
        , filepath ==1.4.*
        , fin ==0.2.*
        , linear ==1.22
        , listsafe ==0.1.0.*
        , lens ==5.2
        , matrix ==0.3.*
        , megaparsec ==9.2.*
        , monad-loops ==0.4.*
        , mtl ==2.2.*
        , recursion-schemes ^>=5.2.2.3
        , split ==0.2.*
        , statistics
        , template-haskell
        , text ==1.2.*
        , vector ==0.13.*
    default-extensions:
        ApplicativeDo
        BangPatterns
        LambdaCase
        NamedFieldPuns
        OverloadedStrings
        RecordWildCards

library
    import:           common-options
    hs-source-dirs:   src
    exposed-modules:
        Lib.Console
        Lib.Counter
        Lib.Matrix
        Lib.Parse
        Lib.Summary
        Lib.Utils
        Lib.Utils.Geometry
        Puzzles.Map
        Puzzles.Puzzles
        Puzzles.Test
        Puzzles.Y22.Day01
        Puzzles.Y22.Day02
        Puzzles.Y22.Day03
        Puzzles.Y22.Day04
        Puzzles.Y22.Day05
        Puzzles.Y22.Day06
        Puzzles.Y22.Day07
        Puzzles.Y22.Day08
        Puzzles.Y22.Day09
        Puzzles.Y22.Day10
        Puzzles.Y22.Day11
        Puzzles.Y22.Day12
        Puzzles.Y22.Day13
        Puzzles.Y22.Day14
        Puzzles.Y22.Day15
        Puzzles.Y22.Day16
        Puzzles.Y22.Day17
        Puzzles.Y22.Day18
        Puzzles.Y22.Day19
        Puzzles.Y22.Day20
        Puzzles.Y22.Day21
        Puzzles.Y22.Day22
        Puzzles.Y22.Day23
        Puzzles.Y22.Day24
        Puzzles.Y22.Day25
        Puzzles.Y23.Day01
        Puzzles.Y23.Day02
        Puzzles.Y23.Day03

executable aoc-exe
    import:           common-options
    main-is:          aoc.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        aoc
        , optparse-applicative
    hs-source-dirs:   app

test-suite aoc-test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  other-modules:
      Paths_aoc
  build-depends:
      base ^>=4.14.3.0
      , HUnit
